syntax = "proto3";

import "rpc_service.proto";

package base.common.rpc_cent;


option go_package = "com.youyu.api/app/rpc/proto_files";

service SecretKeyApi {
  // 用户登录状态Token
  rpc BindTokenToUser(user) returns (user){}
  rpc ForTokenGetBindUser(user) returns (user){}
  rpc DeleteBindUser(user) returns (rpc_service.null){}
  // Csrf Token
  // Rsa key
  rpc GetPublicKey(rsa_key) returns (rsa_key){}
  rpc GetPrivateKey(rsa_key) returns (rsa_key) {}
}

message user {
  // 回传的提示码
  int32 code = 1;
  // 回传使用的提示信息
  string message = 2;
  // 用户id
  int32 uid = 3;
  // 过期时间
  int64 exp_time = 4;
  // 返回绑定的token
  string token = 5;
}

message rsa_key {
  // 公钥
  string public_key = 1;
  // 私钥
  string private_key = 2;
  // 客户端id,与私钥绑定，获取私钥使用
  string client_id = 3;
}
